# run

./: .gitignore  CLAUDE.md
.claude/: settings.json
.claude/commands/adk/: analyze.md  constitution.md  erd.md  plan.md  tasks.md
.cursor/: rust-bun.mdc  rust.mdc
.ttadk/: .stack-cache.json  config.yaml  validation-rules.yaml
.ttadk/mcp/: lark_docs.yaml  tika_search.yaml
.ttadk/memory/: constitution.md
.ttadk/scripts/: archive-spec.js  check-prerequisites.js  common.js  create-new-feature-lite.js  create-new-feature.js  get-stack-context.js  setup-plan.js  update-agent-context.js  update-dependencies.js
.ttadk/stacks/base/: base.yaml
.ttadk/stacks/common/: common.yaml
.ttadk/templates/: checklist-template.md  plan-template-lite.md  plan-template.md  spec-template-lite.md  tasks-template-lite.md  tasks-template.md  technical-design-template.md
.ttadk/templates/commands-definitions/: apply.md  archive.md  checklist.md  clarify.md  commit.md  implement.md  proposal.md  revise.md  specify.md
rust-bun/: Cargo.toml  README.md
rust-bun/specs/bake/: PLAN.md  SPEC.md  TASKS.md  s3_redis_spec.md  s3_redis_tasks.md
rust-bun/specs/bundler/: PLAN.md  SPEC.md  TASKS.md
rust-bun/specs/core/: PLAN.md  SPEC.md  TASKS.md
rust-bun/specs/css/: PLAN.md  SPEC.md  TASKS.md
rust-bun/specs/ffi/: PLAN.md  SPEC.md  TASKS.md
rust-bun/specs/http/: PLAN.md  SPEC.md  TASKS.md
rust-bun/specs/install/: PLAN.md  SPEC.md  TASKS.md
rust-bun/specs/jsc/: PLAN.md  SPEC.md  TASKS.md
rust-bun/specs/node/: PLAN.md  SPEC.md  TASKS.md
rust-bun/specs/parser/: PLAN.md  SPEC.md  TASKS.md
rust-bun/specs/resolver/: PLAN.md  SPEC.md  TASKS.md
rust-bun/specs/shell/: PLAN.md  SPEC.md  TASKS.md
rust-bun/specs/sql/: PLAN.md  SPEC.md  TASKS.md
rust-bun/specs/test/: PLAN.md  SPEC.md  TASKS.md
rust-bun/specs/web/: PLAN.md  SPEC.md  TASKS.md
